--- a/css/component.css
+++ b/css/component.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -10,6 +11,10 @@ body {
 header {
     margin: 0;
     padding: 0;
+}
+
+a {
+    text-decoration: none;
 }
 
 nav {
