--- a/css/component.css
+++ b/css/component.css
@@ -1,3 +1,8 @@
+:root {
+    --dark:#1E1E1E;
+    --white: #F7F7F7;
+}
+
 * {
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
@@ -17,13 +22,103 @@ a {
     text-decoration: none;
 }
 
-nav {
+.text {
     margin: 0;
+    padding: 0;
+}
+
+nav {
     padding: 1rem 70px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: var(--dark);
 }
 
+.logo-container {
+    width: 200px;
+    height: 44px;
+    border-radius: 1rem;
+    background-color: var(--white);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.desktop-nav {
+    display: none;
+}
+
+#search {
+    border-radius: 1rem;
+    border: 1px solid var(--white);
+    width: 320px;
+    height: 40px;
+    padding: 0 1rem;
+}
+
+.menu {
+    width: 44px;
+    height: 44px;
+}
+
+.menu-container {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu-size {
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    position: relative;
+}
+
+.menu-btn {
+    background-color: var(--dark);
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu-background {
+    right: 36px;
+    top: 4px;
+    background-color: var(--white);
+}
+
+.btn {
+    margin-top: 2rem;
+    width: 404px;
+    height: 48px;
+}
+
+.mainbtn-container {
+    position: absolute;
+}
+
+.btn-size {
+    position: relative;
+    width: 400px;
+    height: 44px;
+    border-radius: 1rem;
+}
+
+.main-btn {
+    background-color: var(--white);
+    z-index: 10;
+    font-weight: 700;
+    font-size: 24px;
+    color: var(--dark);
+    border: none;
+}
+
+.mainbtn-background {
+    background-color: var(--dark);
+    left: 8px;
+    bottom: 36px;
+}
 
